Added javascript code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
             </form>
 
             <hr>
-            <div class="recent-section" id="recent-locations"></div>
+
+            <div class="recent-section">
+                <h3>Recent locations</h3>
+                <ul class="recent-section" id="recent-locations"></ul>
+            </div>
 
             <div class="location-buttons">
                 <button class="location-btn" id="birmingham">Birmingham</button>
@@ -60,5 +64,6 @@
         </section>
     </main>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
